...
            "state": "translated",
            "value": "تظهر مذكرة واحدة فقط على شاشة القفل في كل مرة."
          }
        }
      }
    },
    "navigation.calendar": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Kalender"
...
            "state": "translated",
            "value": "عرض"
          }
        }
      }
    },
    "navigation.settings": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
...
            "state": "translated",
            "value": "الإعدادات"
          }
        }
      }
    },
    "navigation.today": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Heute"
...
            "state": "translated",
            "value": "معاينة خريطة شاشة القفل"
          }
        }
      }
    },
    "onboarding.skip": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Überspringen"
...
